patch
Issue #562